add testing library and improve the ebay test

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^10.3.1"
+    "@shelex/cypress-allure-plugin": "^2.28.0",
+    "@testing-library/cypress": "^8.0.3",
+    "cypress": "^10.3.1",
+    "cypress-iframe": "^1.0.1"
   }
 }
