--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "next build",
+    "build": "npm run build",
+    "start": "npm start",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
