--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Instal dependencies
-        with: npm install
       - name: Run api server
-        with: npm run api
+        uses: npm run api
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
