--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Run api server
-        uses: npm run api
+      
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          build: npm run test
+          build: npm run build
         
   
