--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Api setup
-        uses: cypress-io/github-action@v4
+      - uses: actions/setup-node@v1
         with:
-          api: npm run api
+          node-version: 16.x
+      - name: Api setup
+        run:  npm run api
       
       - name: Cypress run
         uses: cypress-io/github-action@v4
