--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,18 +10,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16.x
-      - name: Install
-        run: npm install
-      - name: Api setup
-        run:  npm run api
       
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-            shell: bash
-            run:   npm run build
+          build: npm run build
         
   
