Revert "add reporter mochawesome"
This reverts commit aa4c221fa8ec1906abbb65cdc4daea96abc32e50.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          test: npm run test
+          build: npm run build
         
   
