--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cypress run --reporter mochawesome --reporter-options reportDir=cypress/results,overwrite=false,html=false,json=true",
-    "mocha:merge": "npx mochawesome-merge cypress/results/*.json > mochawesome.json",
-    "mocha:marge": "npx marge mochawesome.json",
-    "clean:reports": "del-cli --force ./cypress/results && del-cli --force ./mochawesome-report && del-cli --force ./mochawesome.json",
+    "build": "npx cypress run",
+    "cypress:open": "npx cypress open",
+    "cypress:run": "cypress run",
     "api": "json-server --watch  ./cypress/fixtures/db.json",
-    "testapi": "npx cypress run --spec ./cypress/e2e/testApi.cy.js",
-    "test": "npm run clean:reports && npm run build && npm run mocha:merge && npm run mocha:marge"
+    "testapi": "npx cypress run --spec ./cypress/e2e/testApi.cy.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,12 +17,7 @@
     "@testing-library/cypress": "^8.0.3",
     "cypress": "^10.3.1",
     "cypress-iframe": "^1.0.1",
-    "cypress-multi-reporters": "^1.6.1",
-    "del-cli": "^5.0.0",
     "faker": "^4.1.0",
-    "json-server": "^0.15.1",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.2.1",
-    "mochawesome-report-generator": "^6.2.0"
+    "json-server": "^0.15.1"
   }
 }
