--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,10 @@
 
 name: Cypress Tests
 
-on: [push]
+on: 
+  push:
+      branches:
+      - main
   
 jobs:
   cypress-run:
@@ -23,4 +26,6 @@ jobs:
         with:
           name: Reports
           path: mochawesome-report/mochawesome.html
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v3
   
