--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
       - name: Install
         run: npm install
       
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
-        with:
-          build: npm run test
+      - name: Test run
+        run: npm run test
 
       - name: Output test results
         uses: actions/upload-artifact@v3
